tests/samples/negative/control_flow/for_init_scope.ax
module for_init_scope;

fn main() -> i32 {
    for let i: i32 = 0; i < 1; i = i + 1 {
    }
    return i;
}
